Create VideosController
