# swagger/v1/swagger.yaml
@@ -35,7 +35,7 @@ paths:
                     items:
                       "$ref": "#/components/schemas/notification"
                   meta:
-                    "$ref": "#/components/schemas/notifications_meta"
+                    "$ref": "#/components/schemas/list_meta"
                 required:
                 - data
                 - meta
@@ -48,10 +48,113 @@ paths:
                     items:
                       "$ref": "#/components/schemas/notification"
                   meta:
-                    "$ref": "#/components/schemas/notifications_meta"
+                    "$ref": "#/components/schemas/list_meta"
                 required:
                 - data
                 - meta
+  "/api/v1/videos":
+    get:
+      summary: videos list
+      tags:
+      - Videos
+      parameters:
+      - name: limit
+        in: query
+        type: integer
+        schema:
+          type: integer
+        required: false
+      - name: offset
+        in: query
+        type: integer
+        schema:
+          type: integer
+        required: false
+      responses:
+        '200':
+          description: returns videos list
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  data:
+                    type: array
+                    items:
+                      "$ref": "#/components/schemas/video"
+                  meta:
+                    "$ref": "#/components/schemas/list_meta"
+                required:
+                - data
+                - meta
+            application/xml:
+              schema:
+                type: object
+                properties:
+                  data:
+                    type: array
+                    items:
+                      "$ref": "#/components/schemas/video"
+                  meta:
+                    "$ref": "#/components/schemas/list_meta"
+                required:
+                - data
+                - meta
+    post:
+      summary: Creates a blog
+      tags:
+      - Videos
+      parameters: []
+      responses:
+        '200':
+          description: video in process
+        '422':
+          description: invalid request
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                title:
+                  type: string
+                description:
+                  type: string
+                record:
+                  type: string
+              required:
+              - title
+              - description
+  "/api/v1/videos/{id}":
+    get:
+      summary: show video
+      tags:
+      - Videos
+      parameters:
+      - name: id
+        in: path
+        type: string
+        schema:
+          type: string
+        required: true
+      responses:
+        '200':
+          description: returns video
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  data:
+                    "$ref": "#/components/schemas/video"
+            application/xml:
+              schema:
+                type: object
+                properties:
+                  data:
+                    "$ref": "#/components/schemas/video"
+        '404':
+          description: video not found
 servers:
 - url: http://{defaultHost}
   variables:
@@ -79,7 +182,24 @@ components:
               type: datetime
             updated_at:
               type: datetime
-    notifications_meta:
+    video:
+      type: object
+      properties:
+        id:
+          type: string
+        type:
+          type: string
+        attributes:
+          type: object
+          properties:
+            title:
+              type: string
+            description:
+              type: string
+            record_url:
+              type: string
+              required: false
+    list_meta:
       type: object
       properties:
         limit:
